# geometry-central

./: .bazelrc  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  geometry-central-config.cmake.in
.github/workflows/: bazel.yml  build_and_test_linux.yml  linux.yml  macOS.yml  windows.yml
cmake/: EigenChecker.cmake  FetchContent.cmake  FindEigen3.cmake  FindSuiteSparse.cmake  GetProjectVersionFromGit.cmake  geometrycentral-config-install.cmake.in
cmake/FetchContent/: CMakeLists.cmake.in
docs/: README.md  mkdocs.yml  mutable_mesh_docs.md
docs/docs/: CNAME  extras.css  index.md
include/: combining_hash_functions.h  curve.h  curve.ipp  dense_matrix.h  dense_matrix.ipp  detect_symmetry.h  direction_fields.h  discrete_operators.h  disjoint_sets.h  fast_marching_method.h  geometry.h  geometry.ipp  halfedge_data_macros.h  halfedge_data_types.h  halfedge_data_types.ipp  halfedge_dual_data_types.h  halfedge_dual_data_types.ipp  halfedge_dual_iterators.h  halfedge_dual_iterators.ipp  halfedge_dual_pointer_types.h  halfedge_dual_pointer_types.ipp  halfedge_iterators.h  halfedge_iterators.ipp  halfedge_mesh.h  halfedge_mesh.ipp  halfedge_pointer_types.h  halfedge_pointer_types.ipp  linear_algebra_utilities.h  linear_algebra_utilities.ipp  meshio.h  polygon_soup_mesh.h  quaternion.h  solvers.h  sparse_matrix.h  spline_surface.h  spline_surface.ipp  timing.h  unit_vector3.h  utilities.h  vector2.h  (+3 more)
include/eigen_wrapper/: LDLFactorization.h  LDLFactorization.ipp  LLFactorization.h  LLFactorization.ipp  LUFactorization.h  LUFactorization.ipp  QRFactorization.h  QRFactorization.ipp  sparse_factorization.h  sparse_factorization.ipp  sparse_matrix_eigen.ipp  sparse_solvers_eigen.ipp
include/geometrycentral/: combining_hash_functions.h  dense_matrix.h  dependent_quantity.h  direction_fields.h  discrete_operators.h  edge_length_geometry.h  fast_marching_method.h  geodesic_triangulation_geometry.h  geometry.h  geometry.ipp  geometry_cache.h  halfedge_data_macros.h  halfedge_data_types.h  halfedge_data_types.ipp  halfedge_dual_data_types.h  halfedge_dual_iterators.h  halfedge_dual_iterators.ipp  halfedge_iterators.h  halfedge_iterators.ipp  halfedge_mesh.h  halfedge_mesh.ipp  halfedge_mesh_data_transfer.h  halfedge_mesh_data_transfer.ipp  halfedge_pointer_types.h  halfedge_pointer_types.ipp  intrinsic_geometry.h  linear_algebra_utilities.h  linear_algebra_utilities.ipp  linear_solvers.h  mesh_embedded_curve.h  mesh_graph_algorithms.h  mesh_ray_tracer.h  meshio.h  mutable_triangle_mesh.h  ply_wrapper.h  polygon_soup_mesh.h  quaternion.h  sparse_matrix.h  suitesparse_utilities.h  timing.h  (+6 more)
include/suitesparse_wrapper/: LDLFactorization.h  LDLFactorization.ipp  LLFactorization.h  LLFactorization.ipp  LUFactorization.h  LUFactorization.ipp  QRFactorization.h  QRFactorization.ipp  (+5 more)
src/: CMakeLists.txt  curve.cpp  dense_matrix.cpp  dependent_quantity.cpp  detect_symmetry.cpp  direction_fields.cpp  discrete_operators.cpp  disjoint_sets.cpp  edge_length_geometry.cpp  eigenproblem_solvers.cpp  fast_marching_method.cpp  geodesic_triangulation_geometry.cpp  geometry.cpp  geometry_cache.cpp  halfedge_dual_iterators.cpp  halfedge_dual_pointer_types.cpp  halfedge_iterators.cpp  halfedge_mesh.cpp  halfedge_mesh_data_transfer.cpp  halfedge_pointer_types.cpp  intrinsic_geometry.cpp  linear_algebra_utilities.cpp  linear_context.cpp  linear_solvers.cpp  mesh_embedded_curve.cpp  mesh_graph_algorithms.cpp  mesh_ray_tracer.cpp  meshio.cpp  mutable_triangle_mesh.cpp  ply_wrapper.cpp  polygon_soup_mesh.cpp  positive_definite_solvers.cpp  qr_solvers.cpp  quaternion.cpp  solvers.cpp  sparse_matrix.cpp  spline_surface.cpp  square_solvers.cpp  suitesparse_utilities.cpp  unit_vector3.cpp  (+3 more)
src/numerical/: eigenproblem_solvers.cpp  linear_algebra_utilities.cpp  linear_solvers.cpp  positive_definite_solvers.cpp  qr_solvers.cpp  square_solvers.cpp  suitesparse_utilities.cpp
src/pointcloud/: geometry3D.cpp  local_triangulation.cpp  neighborhoods.cpp  point_cloud.cpp  point_cloud_heat_solver.cpp  point_cloud_io.cpp  point_position_frame_geometry.cpp  point_position_geometry.cpp  point_position_normal_geometry.cpp  sample_cloud.cpp
src/surface/: barycentric_vector.cpp  base_geometry_interface.cpp  boundary_first_flattening.cpp  common_subdivision.cpp  detect_symmetry.cpp  direction_fields.cpp  dual_mesh.cpp  edge_length_geometry.cpp  embed_convex.cpp  embedded_geometry_interface.cpp  exact_geodesic_helpers.cpp  exact_geodesics.cpp  exact_polyhedral_geodesics.cpp  extrinsic_geometry_interface.cpp  fast_marching_method.cpp  flip_geodesics.cpp  geodesic_centroidal_voronoi_tessellation.cpp  halfedge_factories.cpp  halfedge_mesh.cpp  heat_method_distance.cpp  integer_coordinates_intrinsic_triangulation.cpp  intersection.cpp  intrinsic_geometry_interface.cpp  intrinsic_mollification.cpp  intrinsic_triangulation.cpp  manifold_surface_mesh.cpp  marching_triangles.cpp  mesh_graph_algorithms.cpp  mesh_ray_tracer.cpp  meshio.cpp  mutation_manager.cpp  normal_coordinates.cpp  parameterize.cpp  ply_halfedge_mesh_data.cpp  ply_surface_mesh_data.cpp  poisson_disk_sampler.cpp  polygon_mesh_heat_solver.cpp  polygon_mesh_helpers.cpp  polygon_soup_mesh.cpp  quadric_error_simplification.cpp  (+19 more)
src/utilities/: disjoint_sets.cpp  elementary_geometry.cpp  knn.cpp  quaternion.cpp  tri_tri_intersect.cpp  unit_vector3.cpp  utilities.cpp
test/: .gitignore  BUILD.bazel  CMakeLists.txt
test/assets/: BUILD.bazel  bob_small.ply  fox.ply  lego.ply  sphere_small.ply  spot.ply  stl_box_ascii.stl  stl_box_binary.stl
test/include/: linear_algebra_test_helpers.h  load_test_meshes.h
test/src/: eigen_interop_helpers_test.cpp  halfedge_geometry_test.cpp  halfedge_iterator_categories.cpp  halfedge_mesh_test.cpp  halfedge_mutation_test.cpp  intrinsic_triangulation_test.cpp  linear_algebra_test.cpp  load_test_meshes.cpp  point_cloud_test.cpp  poisson_disk_sampler_test.cpp  polygon_operators_test.cpp  signpost_intrinsic_triangulation_test.cpp  stl_reader_test.cpp  surface_misc_test.cpp
(+216 files in other folders)
