###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "eigen", version = "3.4.0.bcr.1")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
